# ping-pong-point

./: CMakeLists.txt  Nhom3 Mock- PingPong.pptx  README.md  note.txt
src/: main.cpp
src/Collision/: Collision.cpp  Collision.h
src/Engine/: Engine.cpp  Engine.h
src/Input/: Input.cpp  Input.h
src/Object/: GameObject.h  IObject.h
src/Object/Ball/: Ball.cpp  Ball.h
src/Object/Player/: Player.cpp  Player.h
src/Physics/: RigidBody.h  Transform.h  Vector2D.h
src/Screen/: Screen.cpp  Screen.h
src/Timer/: Timer.cpp  Timer.h
